# chordalGraph

./: .gitignore  CMakeLists.txt
RPackage/: DESCRIPTION  NAMESPACE  createData.R
RPackage/R/: armstrongMCMC.R  armstrongPosteriorInference.R  customMCMC.R  customMCMCSymmetric.R  customSymmetricPosteriorInference.R  horvitzThompson.R  horvitzThompson2.R  isChordalIterative.R  onLoad.R  posteriorInference.R  stochasticEnumeration.R  stochasticEnumerationNauty.R
RPackage/data/: approximate10.csv  approximate11.csv  approximate12.csv  approximate13.csv  approximate14.csv  approximate15.csv  approximate16.csv  approximate17.csv  approximate18.csv  approximate19.csv  approximate20.csv  approximate21.csv  approximate22.csv  approximate23.csv  approximate24.csv  approximate25.csv  exact10.csv  exact3.csv  exact4.csv  exact5.csv  exact6.csv  exact7.csv  exact8.csv  exact9.csv
RPackage/src/: CMakeLists.txt
RPackage/src/chordalGraph/: CMakeLists.txt  armstrongMCMC.cpp  armstrongPosteriorInferenceRPackage.cpp  armstrongPosteriorInferenceRPackage.h  convertGraphNEL.cpp  customMCMC.cpp  customMCMCSymmetric.cpp  customSymmetricPosteriorInferenceRPackage.cpp  customSymmetricPosteriorInferenceRPackage.h  graphRepresentation.cpp  graphRepresentation.h  horvitzThompson.cpp  horvitzThompson2.cpp  isChordalIterative.cpp  isChordalIterative.h  posteriorInferenceRPackage.cpp  posteriorInferenceRPackage.h  register.cpp  stochasticEnumeration.cpp  stochasticEnumerationNauty.cpp
RPackage/src/chordalSubgraph/: CMakeLists.txt  convertGraph.cpp  convertGraph.h  convertGraphAM.cpp  convertGraphIGraph.cpp  convertGraphNEL.cpp  isChordalIterative.cpp  register.cpp
RPackage/tests/: testthat.R
RPackage/tests/testthat/: test-exact.R  test-horvitzThompson.R  test-stochasticEnumeration.R  test-stochasticEnumerationNauty.R
Simulations/34Vertices/: script.R  submitScriptSlurm.sh
Simulations/34VerticesCustom/: .gitignore  script.R  submitScriptSlurm.sh
Simulations/armstrongIterativeTest/: .gitignore  script.R  submitScriptSlurm.sh
Simulations/customIterativeTest/: script.R  submitScriptSlurm.sh
Simulations/customIterativeTest28/: .gitignore  producePlots.R  productePlots.R  script.R  submitJobsSlurm.R  submitScriptSlurm.sh
Simulations/fowlBones/: script.R
Simulations/iterativeCustomTest/: .gitignore  script.R
Simulations/iterativeTest/: script.R  submitScriptSlurm.sh
Simulations/physicalData/: physical.txt
berry2006Test/: CMakeLists.txt  test.cpp
chordalGraphCommon/: CMakeLists.txt  armstrongMCMC.cpp  armstrongMCMC.h  armstrongPosteriorInference.cpp  armstrongPosteriorInference.h  childNode.h  cholesky.hpp  cliqueTree.cpp  cliqueTree.h  cliqueTreeAdjacencyMatrix.cpp  cliqueTreeAdjacencyMatrix.h  conditionalPoisson.cpp  conditionalPoisson.h  customMCMC.cpp  customMCMC.h  customMCMCSymmetric.cpp  customMCMCSymmetric.h  customSymmetricPosteriorInference.cpp  customSymmetricPosteriorInference.h  horvitzThompson.cpp  horvitzThompson.h  horvitzThompson2.cpp  horvitzThompson2.h  horvitzThompsonReduceChains.cpp  horvitzThompsonReduceChains.h  numericType.h  pareto.cpp  pareto.h  performSampling.cpp  performSampling.h  posteriorInference.cpp  posteriorInference.h  sampford.h  sampfordBruteForce.cpp  sampfordConditionalPoissonRejective.cpp  sampfordFromParetoNaive.cpp  samplingType.cpp  samplingType.h  semiDeterministicSampling.cpp  semiDeterministicSampling.h  (+7 more)
chordalSubgraphCommon/: CMakeLists.txt  cliqueTree.cpp  cliqueTree.h
conditionalPoissonTest/: CMakeLists.txt  conditionalPoissonTest.cpp
copyBinary/: CMakeLists.txt
copyText/: CMakeLists.txt
stochasticEnumeration/: CMakeLists.txt  stochasticEnumeration.cpp
testComputeAutomorphismGroupSize/: .gitignore  CMakeLists.txt  generateGraphs.nb  test.cpp
testFormTree/: CMakeLists.txt  testFormTree.cpp
testMCMC/: .test.cpp.swp  CMakeLists.txt  test.cpp
testMCMC2/: CMakeLists.txt  test.cpp
