cmake_minimum_required(VERSION 3.1)
set(CppFiles register.cpp isChordalIterative.cpp convertGraph.cpp convertGraphAM.cpp convertGraphNEL.cpp convertGraphIGraph.cpp stochasticEnumeration.cpp stochasticEnumerationNauty.cpp horvitzThompson.cpp graphRepresentation.cpp horvitzThompson2.cpp)
set(HeaderFiles isChordalIterative.h convertGraph.h graphRepresentation.h)
add_library(chordalGraphRPackage SHARED ${CppFiles} ${HeaderFiles})
target_link_libraries(chordalGraphRPackage PUBLIC chordalGraphCommon Rcpp)
set_target_properties(chordalGraphRPackage PROPERTIES OUTPUT_NAME "chordalGraph")
target_compile_definitions(chordalGraphRPackage PRIVATE CUSTOM_STATIC_RCPP)

if(WIN32)
	target_compile_definitions(chordalGraphRPackage PUBLIC _CRT_SECURE_NO_WARNINGS)
	target_link_libraries(chordalGraphRPackage PRIVATE "${CMAKE_BINARY_DIR}/RPackage/R.lib")
	foreach(BUILD_TYPE IN LISTS CMAKE_CONFIGURATION_TYPES)
		string(TOUPPER "${BUILD_TYPE}" UPPER_BUILD_TYPE)
		if(CMAKE_SIZEOF_VOID_P EQUAL 8)
			set_target_properties(chordalGraphRPackage PROPERTIES RUNTIME_OUTPUT_DIRECTORY_${UPPER_BUILD_TYPE} ${CMAKE_BINARY_DIR}/RPackage/${BUILD_TYPE}/inst/libs/x64 PDB_OUTPUT_DIRECTORY_${UPPER_BUILD_TYPE} ${CMAKE_BINARY_DIR}/RPackage/${BUILD_TYPE}/inst/libs/x64)
		else()
			set_target_properties(chordalGraphRPackage PROPERTIES RUNTIME_OUTPUT_DIRECTORY_${UPPER_BUILD_TYPE} ${CMAKE_BINARY_DIR}/RPackage/${BUILD_TYPE}/inst/libs/i386 PDB_OUTPUT_DIRECTORY_${UPPER_BUILD_TYPE} ${CMAKE_BINARY_DIR}/RPackage/${BUILD_TYPE}/inst/libs/i386)
		endif()
	endforeach()
else()
	set_target_properties(chordalGraphRPackage PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/RPackage/src)
	set_target_properties(chordalGraphRPackage PROPERTIES PREFIX "")
endif()
