cmake_minimum_required(VERSION 3.1)
set(CppFiles register.cpp)
set(HeaderFiles)
add_library(chordalSubgraphRPackage SHARED ${CppFiles} ${HeaderFiles})
target_link_libraries(chordalSubgraphRPackage PUBLIC chordalSubgraphCommon Rcpp)
set_target_properties(chordalSubgraphRPackage PROPERTIES OUTPUT_NAME "chordalSubgraph")

if(WIN32)
	target_compile_definitions(chordalSubgraphRPackage PUBLIC _CRT_SECURE_NO_WARNINGS)
	target_link_libraries(chordalSubgraphRPackage PRIVATE "${CMAKE_BINARY_DIR}/RPackage/R.lib")
	foreach(BUILD_TYPE IN LISTS CMAKE_CONFIGURATION_TYPES)
		string(TOUPPER "${BUILD_TYPE}" UPPER_BUILD_TYPE)
		set_target_properties(chordalSubgraphRPackage PROPERTIES RUNTIME_OUTPUT_DIRECTORY_${UPPER_BUILD_TYPE} ${CMAKE_BINARY_DIR}/RPackage/${BUILD_TYPE}/inst/libs/x64 PDB_OUTPUT_DIRECTORY_${UPPER_BUILD_TYPE} ${CMAKE_BINARY_DIR}/RPackage/${BUILD_TYPE}/inst/libs/x64)
	endforeach()
else()
	set_target_properties(chordalSubgraphRPackage PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/RPackage/src)
	set_target_properties(chordalSubgraphRPackage PROPERTIES PREFIX "")
endif()
